--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity"
+        <activity android:screenOrientation="landscape" android:configChanges="orientation|keyboardHidden" android:name=".SecondActivity"
                   android:label="@string/app_name">
         </activity>
     </application>
