--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.mkp.spydroid"
-      android:versionCode="1"
-      android:versionName="1.0">
+      android:versionCode="12"
+      android:versionName="1.2">
     <uses-sdk android:minSdkVersion="10" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
@@ -14,6 +14,9 @@
             </intent-filter>
         </activity>
         <activity android:screenOrientation="landscape" android:configChanges="orientation|keyboardHidden" android:name=".SecondActivity"
+                  android:label="@string/app_name">
+        </activity>
+                <activity android:name=".QualityListActivity"
                   android:label="@string/app_name">
         </activity>
     </application>
