--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.mkp.spydroid"
-      android:versionCode="12"
-      android:versionName="1.2">
+      package="net.majorkernelpanic.spydroid"
+      android:versionCode="13"
+      android:versionName="1.3">
     <uses-sdk android:minSdkVersion="10" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
