--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.majorkernelpanic.spydroid"
-      android:versionCode="15"
-      android:versionName="1.5">
+      android:versionCode="16"
+      android:versionName="1.6">
     <uses-sdk android:minSdkVersion="10" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".SpydroidActivity"
+        <activity android:screenOrientation="portrait" android:name=".SpydroidActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:screenOrientation="landscape" android:configChanges="orientation|keyboardHidden" android:name=".SecondActivity"
-                  android:label="@string/app_name">
-        </activity>
-                <activity android:name=".QualityListActivity"
+        <activity android:name=".QualityListActivity"
                   android:label="@string/app_name">
         </activity>
     </application>
