--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.majorkernelpanic.spydroid"
-      android:versionCode="21"
-      android:versionName="2.1">
+      android:versionCode="22"
+      android:versionName="2.2">
     <uses-sdk android:minSdkVersion="10" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:screenOrientation="portrait" android:name=".SpydroidActivity"
