--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.majorkernelpanic.spydroid"
-      android:versionCode="22"
-      android:versionName="2.2">
+      android:versionCode="23"
+      android:versionName="2.3">
+      
     <uses-sdk android:minSdkVersion="10" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CAMERA"></uses-permission>   
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
+    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:screenOrientation="portrait" android:name=".SpydroidActivity"
+        <activity android:screenOrientation="portrait" 
+                  android:name=".SpydroidActivity"
+                  android:launchMode="singleInstance"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,11 +27,5 @@
                   android:label="@string/app_name">
         </activity>
     </application>
-
-    <uses-permission android:name="android.permission.CAMERA"></uses-permission>   
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
-    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 
 </manifest>
