--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,11 +2,13 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.majorkernelpanic.spydroid"
-      android:versionCode="23"
-      android:versionName="2.3">
+      android:versionCode="31"
+      android:versionName="3.1">
       
     <uses-sdk android:minSdkVersion="10" />
     <uses-permission android:name="android.permission.CAMERA"></uses-permission>   
+ 	<uses-feature android:name="android.hardware.camera" />
+ 	<uses-feature android:name="android.hardware.camera.autofocus" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
@@ -24,6 +26,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".QualityListActivity"
+                  android:label="@string/app_name">
+        </activity>
+        <activity android:name=".OptionsActivity"
                   android:label="@string/app_name">
         </activity>
     </application>
