--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.majorkernelpanic.spydroid"
-      android:versionCode="402"
-      android:versionName="4.0.2">
+      android:versionCode="410"
+      android:versionName="410">
       
     <uses-sdk android:minSdkVersion="10" />
     <uses-permission android:name="android.permission.CAMERA"></uses-permission>   
@@ -19,6 +19,7 @@
         <activity android:screenOrientation="portrait" 
                   android:name=".SpydroidActivity"
                   android:launchMode="singleInstance"
+                  android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
