Bug fix in testH264() and some code cleaning
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@155 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,6 +32,9 @@
         <activity android:name=".OptionsActivity"
                   android:label="@string/app_name">
         </activity>
+        <activity android:name=".ClientActivity"
+                  android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
