--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
       android:versionName="6.2">
       
     <uses-sdk android:minSdkVersion="10" />
-    <uses-permission android:name="android.permission.CAMERA"></uses-permission>   
+    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
  	<uses-feature android:name="android.hardware.camera" />
  	<uses-feature android:name="android.hardware.camera.autofocus" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
@@ -15,8 +15,9 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.READ_LOGS"></uses-permission>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="SpydroidApplication">
         <activity android:screenOrientation="portrait" 
                   android:name=".SpydroidActivity"
                   android:launchMode="singleInstance"
