--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,10 +2,10 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.majorkernelpanic.spydroid"
-      android:versionCode="651"
-      android:versionName="6.5.1">
+      android:versionCode="660"
+      android:versionName="6.6">
       
-    <uses-sdk android:minSdkVersion="10" />
+    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="14" />
     <uses-permission android:name="android.permission.CAMERA"></uses-permission>
  	<uses-feature android:name="android.hardware.camera" />
  	<uses-feature android:name="android.hardware.camera.autofocus" />
