--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,10 +17,10 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 	
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="SpydroidApplication" android:allowBackup="true" android:debuggable="true">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="net.majorkernelpanic.spydroid.SpydroidApplication" android:allowBackup="true" android:debuggable="true">
         
         <activity android:screenOrientation="portrait" 
-                  android:name=".ui.SpydroidActivity"
+                  android:name="net.majorkernelpanic.spydroid.ui.SpydroidActivity"
                   android:launchMode="singleInstance"
                   android:theme="@android:style/Theme.Panel"
                   android:label="@string/app_name">
@@ -31,15 +31,15 @@
         </activity>
         <activity android:name="com.google.ads.AdActivity"
                   android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
-        <activity android:name=".ui.OptionsActivity"
+        <activity android:name="net.majorkernelpanic.spydroid.ui.OptionsActivity"
                   android:label="@string/options_activity_title">
         </activity>
-        <activity android:name=".ui.ClientActivity"
+        <activity android:name="net.majorkernelpanic.spydroid.ui.ClientActivity"
                   android:screenOrientation="portrait"
             	  android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
                   android:label="@string/client_activity_title">
         </activity>
-        <activity android:name=".ui.AboutActivity"
+        <activity android:name="net.majorkernelpanic.spydroid.ui.AboutActivity"
                   android:label="@string/about_activity_title">
         </activity>
         
