--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.majorkernelpanic.spydroid"
-      android:versionCode="690"
-      android:versionName="6.9">
+      android:versionCode="700"
+      android:versionName="7.0">
       
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="14" />
     
@@ -17,12 +17,11 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 	
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="net.majorkernelpanic.spydroid.SpydroidApplication" android:allowBackup="true" android:debuggable="true">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="net.majorkernelpanic.spydroid.SpydroidApplication" android:allowBackup="true">
         
-        <activity android:screenOrientation="portrait" 
+        <activity
                   android:name="net.majorkernelpanic.spydroid.ui.SpydroidActivity"
                   android:launchMode="singleInstance"
-                  android:theme="@android:style/Theme.Panel"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,11 +32,6 @@
                   android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
         <activity android:name="net.majorkernelpanic.spydroid.ui.OptionsActivity"
                   android:label="@string/options_activity_title">
-        </activity>
-        <activity android:name="net.majorkernelpanic.spydroid.ui.ClientActivity"
-                  android:screenOrientation="portrait"
-            	  android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
-                  android:label="@string/client_activity_title">
         </activity>
         <activity android:name="net.majorkernelpanic.spydroid.ui.AboutActivity"
                   android:label="@string/about_activity_title">
