--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,41 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.majorkernelpanic.spydroid"
-      android:versionCode="700"
-      android:versionName="7.0">
-      
-    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="14" />
-    
-    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
- 	<uses-feature android:name="android.hardware.camera" />
- 	<uses-feature android:name="android.hardware.camera.autofocus" />
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
-    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
-	
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="net.majorkernelpanic.spydroid.SpydroidApplication" android:allowBackup="true">
+    package="net.majorkernelpanic.spydroid"
+    android:versionCode="800"
+    android:versionName="8.0" >
+
+    <uses-sdk
+        android:minSdkVersion="9"
+        android:targetSdkVersion="14" />
+
+    <uses-permission android:name="android.permission.CAMERA" >
+    </uses-permission>
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <application
+        android:name="net.majorkernelpanic.spydroid.SpydroidApplication"
+        android:allowBackup="true"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
         
         <activity
-                  android:name="net.majorkernelpanic.spydroid.ui.SpydroidActivity"
-                  android:launchMode="singleInstance"
-                  android:label="@string/app_name">
+            android:name="net.majorkernelpanic.spydroid.ui.SpydroidActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleInstance" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.google.ads.AdActivity"
-                  android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
-        <activity android:name="net.majorkernelpanic.spydroid.ui.OptionsActivity"
-                  android:label="@string/options_activity_title">
+        
+        <activity
+            android:name="com.google.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
+        
+        <activity
+            android:name="net.majorkernelpanic.spydroid.ui.OptionsActivity"
+            android:label="@string/options_activity_title" >
         </activity>
-        <activity android:name="net.majorkernelpanic.spydroid.ui.AboutActivity"
-                  android:label="@string/about_activity_title">
+        
+        <activity
+            android:name="net.majorkernelpanic.spydroid.ui.AboutActivity"
+            android:label="@string/about_activity_title" >
         </activity>
+
+        <service
+            android:name="net.majorkernelpanic.spydroid.api.CustomHttpServer"/>
         
     </application>
 
