--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,9 +8,6 @@
         android:minSdkVersion="9"
         android:targetSdkVersion="14" />
 
-    <uses-permission android:name="android.permission.CAMERA" >
-    </uses-permission>
-
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
@@ -20,7 +17,9 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
+	<uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+	
     <application
         android:name="net.majorkernelpanic.spydroid.SpydroidApplication"
         android:allowBackup="true"
