Proguard without obfuscation. SSL readded but still unstable.

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -1,9 +1,14 @@
+-dontobfuscate
+-dontoptimize
+
 -optimizationpasses 5
 -dontusemixedcaseclassnames
 -dontskipnonpubliclibraryclasses
 -dontpreverify
 -verbose
 -optimizations !code/simplification/arithmetic,!field/*,!class/merging/*
+
+-keepattributes Exceptions,InnerClasses,...
 
 -keep public class * extends android.app.Activity
 -keep public class * extends android.app.Application
@@ -37,4 +42,26 @@
 
 -keep class * implements android.os.Parcelable {
   public static final android.os.Parcelable$Creator *;
+}
+
+
+-dontwarn org.spongycastle.x509.util.LDAPStoreHelper
+-dontwarn org.spongycastle.jce.provider.X509LDAPCertStoreSpi
+
+-keep public class net.majorkernelpanic.http.* {
+	*;
+}
+	
+-keepclassmembers class **.R$* {
+    public static <fields>;
+}
+
+-keep class **.R$*
+
+-keep public class org.spongycastle.jcajce.provider.** {
+	*;
+}
+
+-keep public class org.spongycastle.jce.provider.JCESecretKeyFactory$PBEWithSHAAndDES3Key {
+	*;
 }
