A problem remains with Bouncy/Proguard, I will fix it soon

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -62,6 +62,14 @@
 	*;
 }
 
+-keep public class org.spongycastle.jce.provider.JCEBlockCipher$PBEWithSHAAndTwofish {
+	*;
+}
+
 -keep public class org.spongycastle.jce.provider.JCESecretKeyFactory$PBEWithSHAAndDES3Key {
+	*;
+}
+
+-keep public class org.spongycastle.jce.provider.JCESecretKeyFactory$PBEWithSHAAndTwofish {
 	*;
 }
