RTSP server disabled by default. Some bug fixes.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,7 +52,7 @@
         </activity>
 
         <service android:name="net.majorkernelpanic.spydroid.api.CustomHttpServer"/>
-        <service android:name="net.majorkernelpanic.streaming.misc.RtspServer"/>
+        <service android:name="net.majorkernelpanic.spydroid.api.CustomRtspServer"/>
         
     </application>
 
