Updated support library and target sdk

--- a/project.properties
+++ b/project.properties
@@ -8,5 +8,5 @@
 # project structure.
 
 # Project target.
-target=android-17
-proguard.config=proguard.cfg
+target=android-18
+proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
