--- a/ipcamera/src/main/AndroidManifest.xml
+++ b/ipcamera/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.majorkernelpanic.spydroid"
     android:versionCode="1000"
-    android:versionName="10" >
+    android:versionName="10">
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -14,19 +14,19 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
-	<uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    
-	
+
+
     <application
         android:name="net.majorkernelpanic.spydroid.SpydroidApplication"
         android:allowBackup="true"
         android:icon="@drawable/icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name">
 
         <uses-library
             android:name="org.apache.http.legacy"
-            android:required="false"/>
+            android:required="false" />
 
         <activity
             android:name="net.majorkernelpanic.spydroid.ui.SpydroidActivity"
@@ -41,12 +41,11 @@
 
         <activity
             android:name="net.majorkernelpanic.spydroid.ui.OptionsActivity"
-            android:label="@string/options_activity_title" >
-        </activity>
+            android:label="@string/options_activity_title"></activity>
 
-        <service android:name="net.majorkernelpanic.spydroid.api.CustomHttpServer"/>
-        <service android:name="net.majorkernelpanic.spydroid.api.CustomRtspServer"/>
-        
+        <service android:name="net.majorkernelpanic.spydroid.api.CustomHttpServer" />
+        <service android:name="net.majorkernelpanic.spydroid.api.CustomRtspServer" />
+
     </application>
 
 </manifest>
